@@ -4,6 +4,7 @@ Core - General
 - Minor fix to missing lang string stuff
 - Fixes to home page preferences
 - API documentation fixes (minor)
+- Fixes for ajax_content (the ajax routine behind the parent selector in edit content) to handle ordering inconsistencies.
 
 ModuleManager v2.0.2
 - Minor fix for some notices in install and upgrade modules.
